2005-01-11 David Inglis
	Further fix to 36837
	
	* src/org/eclipse/cdt/internal/ui/util/ResourceToItemsMapper.java
	
2005-01-11 David Inglis

	Fix for 82516
	
	* src/org/eclipse/cdt/internal/ui/viewsupport/CElementLabels.java
	
2004-12-08 Bogdan Gheorghe
	Fix for 76123
	* src/org/eclipse/cdt/internal/ui/search/CSearchResultPage.java
	
	Added sorting for external file matches
	* src/org/eclipse/cdt/internal/ui/search/LevelTreeContentProvider.jaav
	* src/org/eclipse/cdt/ui/CSearchResultLabelProvider.java
	
2004-12-06 Alain Magloire
	Fix for 79865
	* src/org/eclipse/cdt/internal/ui/text/CHelpProviderDescriptor.java

2004-12-03 Chris Wiebe
	fix for 74098
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCodeGenerator.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardPage.java
	
2004-12-03 Alain Magloire
	Implement comment blocks(Code take from JDT Editor)
	This seems to be of importance for some ISV(including QNX)
	So we move it here to the branch also.

	* src/org/eclipse/cdt/internal/ui/action/AddBlockCommentAction.java
	* src/org/eclipse/cdt/internal/ui/action/BlockCommentAction.java
	* src/org/eclipse/cdt/internal/ui/action/RemoveBlockCommentAction.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorMessages.properties
	* src/org/eclipse/cdt/internal/ui/editor/ICEditorActionDefinitionIds.java
	* src/org/eclipse/cdt/internal/ui/text/	CPartitionScanner.java
	* src/org/eclipse/cdt/internal/ui/text/CTextTools.java
	* src/org/eclipse/cdt/internal/ui/text/FastCPartitionScanner.java
	* src/org/eclipse/cdt/internal/ui/text/ICPartitions.java
	* plugin.xml
	* plugin.properties

2004-12-02 Alain Magloire
	Fix for 40081
	Textfield to choose NM.
	Fix MacOX binary parser page.
	* src/org/eclipse/cdt/internal/ui/CUIMessages.properties.
	* src/org/eclipse/cdt/ui/dialogs/BinaryParserBlock.java
	* src/org/eclipse/cdt/ui/dialogs/CygwinPEBinarParserPage.java